<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaseDeDatos</string>
    <string name="action_settings">Settings</string>
    <string name="num">Número de empleado</string>
    <string name="hint">121130248</string>
    <string name="nom">Nombre: </string>
    <string name="hint2">Rodrigo</string>
    <string name="emp">Consulta por numero de empleado</string>
    <string name="baja">Baja</string>
    <string name="mod">Modificación</string>
    <string name="alta">Alta</string>

</resources>
