<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BDMainActivity" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/num" />
    <EditText 
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv1"
        android:ems="10"
        android:hint="@string/hint"
        >
        <requestFocus/>
        </EditText>

    <TextView 
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et1"
        android:text="@string/nom"/>
    
    <EditText 
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv2"
        android:ems="10"
        android:hint="@string/hint2"
        />
    
    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et2"
        android:layout_marginTop="32dp"
        android:onClick="alta"
        android:text="@string/alta" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bt1"
        android:layout_toRightOf="@+id/bt3"
        android:onClick="consulta"
        android:text="@string/emp" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt1"
        android:layout_below="@+id/bt2"
        android:layout_marginTop="20dp"
        android:onClick="baja"
        android:text="@string/baja" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt3"
        android:layout_alignBottom="@+id/bt3"
        android:layout_alignLeft="@+id/bt2"
        android:layout_alignRight="@+id/bt2"
        android:onClick="modificacion"
        android:text="@string/mod" />

</RelativeLayout>
